<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Museums In</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_banner_fragment">BannerFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_name_art">Art</string>
    <string name="btn_name_all">All</string>
    <string name="btn_name_free">Free</string>
    <string name="btn_name_history">History</string>
    <string name="btn_name_houses">Houses</string>
    <string name="btn_name_science">Science</string>
    <string name="title_show_on_map">Show On Map</string>
    <string name="title_all_museums">All Museums</string>
    <string name="title_open_on">Open On</string>
    <string name="action_citypass">City Pass</string>
    <string name="title_rentals">Rentals</string>
    <string name="action_intern">Interships</string>
    <string name="title_sunday">Sunday</string>
    <string name="title_monday">Monday</string>
    <string name="title_tuesday">Tuesday</string>
    <string name="title_wednesday">Wednesday</string>
    <string name="title_thursday">Thursday</string>
    <string name="title_friday">Friday</string>
    <string name="title_saturday">Saturday</string>
    <string name="action_more_apps">More Apps</string>
    <string name="title_tell_friend">Tell A Friend</string>
    <string name="action_contact">Contact Us</string>
    <string name="action_maps">Show In Map</string>
    <string name="action_open">Open On</string>
    <string name="action_share">Share</string>


    <string-array name="item_nav_maps">
        <item>All</item>
        <item>Art</item>
        <item>Free</item>
        <item>History</item>
        <item>Houses</item>
        <item>Science</item>
    </string-array>

    <string-array name="item_days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="item_options">
        <item>City Pass</item>
        <item>Internships</item>
        <item>More Apps</item>
        <!-- <item>Tell A Friend</item> -->
    </string-array>


</resources>
