<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,1,2">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button

            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/btn_name_all"
            android:id="@+id/btnAll"
            android:textColor="@color/ics_swatch_orange03"
            android:background="@drawable/button_state"
            android:layout_margin="2dp"/>

        <Button

            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/btn_name_art"
            android:id="@+id/btnArt"
            android:textColor="@color/ics_swatch_orange03"
            android:background="@drawable/button_state"
            android:layout_margin="2dp"/>

        <Button

            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/btn_name_free"
            android:id="@+id/btnFree"
            android:textColor="@color/ics_swatch_orange03"
            android:background="@drawable/button_state"
            android:layout_margin="2dp"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button

            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/btn_name_history"
            android:id="@+id/btnHistory"
            android:textColor="@color/ics_swatch_orange03"
            android:background="@drawable/button_state"
            android:layout_margin="2dp"/>

        <Button

            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/btn_name_houses"
            android:id="@+id/btnHouses"
            android:textColor="@color/ics_swatch_orange03"
            android:background="@drawable/button_state"
            android:layout_margin="2dp"/>

        <Button

            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/btn_name_science"
            android:id="@+id/btnScience"
            android:textColor="@color/ics_swatch_orange03"
            android:background="@drawable/button_state"
            android:layout_margin="2dp"/>
    </TableRow>
</TableLayout>