<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/museum_nav_drawer_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_show_on_map"
            android:id="@+id/textView"
            android:textColor="@color/ics_swatch_orange05"
            android:background="@color/opaqueLight"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/btn_name_all"
            android:id="@+id/textView3"
            android:textColor="@color/ics_swatch_orange03"
            android:paddingLeft="30dp"
            android:paddingBottom="3dp"/>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewMaps" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_open_on"
            android:id="@+id/textView8"
            android:textColor="@color/ics_swatch_orange05"
            android:background="@color/opaqueLight"
            android:paddingLeft="10dp"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/title_sunday"
            android:id="@+id/textView2"
            android:textColor="@color/ics_swatch_orange03"
            android:paddingLeft="30dp"
            android:paddingBottom="3dp"/>

    </LinearLayout>
</ScrollView>